--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             border-width:0px;
             width:100%;
             height:100%;
+            border-radius:5px;
         }
     </style>
 </head>
