--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .wholeContainer
         {
             display:grid;
-            grid-template-rows:1fr 10fr;
+            grid-template-rows:2fr 25fr;
             gap:20px;
             width:100%;
             height:100%;
@@ -41,7 +41,10 @@
             border-width:2px;
             border-color:rgb(48,48,48);
             border-radius:5px;
-            padding:10px;
+            padding-top:7px;
+            padding-bottom:7px;
+            padding-left:13px;
+            padding-right:13px;
         }
         button
         {
@@ -49,7 +52,10 @@
             border-width:2px;
             border-color:rgb(48,48,48);
             border-radius:5px;
-            padding:10px;
+            padding-top:7px;
+            padding-bottom:7px;
+            padding-left:13px;
+            padding-right:13px;
         }
         button:hover
         {
