--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="wholeContainer">
         <div class="inputContainer">
             <input id="link" name="link" type="text" class="theBestFont" placeholder="Youtube url...">
-            <button id="push" class="theBestFont" onclick="changeVideo()">Push</button>
+            <button id="push" class="theBestFont" onclick="changeVideo()">Watch</button>
         </div>
         <iframe id="video" src="" style="padding-left:10px;" allow="fullscreen;"></iframe>
     </div>
