--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             border-width:0px;
             width:100%;
             height:100%;
-            border-radius:5px;
+            /* TODO: make border-radius work on iframe */
         }
     </style>
 </head>
