--- a/index.html
+++ b/index.html
@@ -76,12 +76,16 @@
             <input id="link" name="link" type="text" class="theBestFont" placeholder="Youtube url...">
             <button id="push" class="theBestFont" onclick="changeVideo()">Watch</button>
         </div>
-        <iframe id="video" src="fillURL(getURLParameter('url'))" style="padding-left:10px;" allow="fullscreen;"></iframe>
+        <iframe id="video" src="" style="padding-left:10px;" allow="fullscreen;"></iframe>
     </div>
 </body>
 </html>
 
 <script>
+    // changes iframe video src to parameter url
+    document.getElementById("video").src = fillURL(getURLParameter("url"));
+
+    // listens to enter key presses on input field
     document.getElementById("link").addEventListener("keypress", function(e)
     {
         if (e.keyCode === 13)
@@ -91,6 +95,7 @@
         }
     });
 
+    // gets the value of the key in url parameters
     function getURLParameter (key)
     {
         let url = window.location.href.split("?")[1];
@@ -109,6 +114,7 @@
         }
     }
 
+    // extracts url from youtube link
     function extractURL (str)
     {
         let a = null;
@@ -127,6 +133,7 @@
         return str.slice(a + 1, (b != null) ? b : str.length);
     }
 
+    // function that plays when button or enter is pressed
     function changeVideo ()
     {
         // console.log(window.location.href);
@@ -144,8 +151,13 @@
         // document.getElementById("video").src = URL_START.concat(data);
     }
 
+    // modifies parameter url with specific values
     function fillURL (str)
     {
+        if (str === null)
+        {
+            return "";
+        }
         const URL_START = "https://www.youtube.com/embed/";
         return URL_START.concat(str);
     }
