--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Version 1.1 -->
+<!-- Version 1.2 -->
 <html>
 <head>
     <title>YOUTUBE WILL LOSE</title>
@@ -168,7 +168,8 @@
             return "";
         }
         const URL_START = "https://www.youtube.com/embed/";
-        return URL_START.concat(str);
+        const URL_END = "?autoplay=1&mute=1";
+        return URL_START.concat(str, URL_END);
     }
 
 </script>
