Revert "implemented autoplay" reversion This reverts commit 1ec701cb912463cba1a16b5e2b4b4a4760491a5f.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Version 1.2 -->
+<!-- Version 1.1 -->
 <html>
 <head>
     <title>YOUTUBE WILL LOSE</title>
@@ -168,8 +168,7 @@
             return "";
         }
         const URL_START = "https://www.youtube.com/embed/";
-        const URL_END = "?autoplay=1&mute=1";
-        return URL_START.concat(str, URL_END);
+        return URL_START.concat(str);
     }
 
 </script>
