--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
      */
     function getURLParameter (url, key)
     {
-        console.log(url);
+        // console.log(url);
         let parameter = url.split('?');
         if (parameter.length <= 1)
         {
