--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Version 1.2 -->
+<!-- Version 1.3 -->
 <html>
 <head>
     <title>YOUTUBE WILL LOSE</title>
@@ -23,7 +23,7 @@
         .inputContainer
         {
             display:grid;
-            grid-template-columns:10fr 1fr;
+            grid-template-columns:1fr 20fr 2fr;
             gap:10px;
             width:100%;
             height:100%;
@@ -37,7 +37,6 @@
         }
         input[type=text]
         {
-            
             background-color:rgb(18,18,18);
             border-width:2px;
             border-color:rgb(48,48,48);
@@ -69,11 +68,26 @@
             height:100%;
             /* TODO: make border-radius work on iframe */
         }
+        .dragIcon
+        {
+            width:100%;
+            height:100%;
+            background-color:rgb(34,34,34);
+            border-radius:5px;
+            display:flex;
+            align-items:center;
+            justify-content:center;
+            text-decoration:none;
+        }
     </style>
 </head>
 <body>
     <div class="wholeContainer">
         <div class="inputContainer">
+            <!-- THIS IS A COPY OF "collectYoutubeParameter" MAKE TO UPDATE BOTH -->
+            <a id="bookmark" class="dragIcon theBestFont" href='javascript:window.open(("https://dadrunkcow.github.io/YoutubeAntiAdBlock/?url=").concat(location.href.replace(/https:\/\/|www\.|youtube\.com\/|youtu\.be\/|watch\?v=|embed\/|shorts\//gi, "").split("&")[0]))'>
+                Click!
+            </a>
             <input id="link" name="link" type="text" class="theBestFont" placeholder="Youtube url...">
             <button id="watch" class="theBestFont" onclick="changeVideo()">Watch</button>
         </div>
@@ -85,6 +99,12 @@
 <script>
     // changes iframe video src to parameter url
     document.getElementById("video").src = fillURL(getURLParameter(window.location.href, "url"));
+
+    // overrides bookmark button
+    document.getElementById("bookmark").onclick = function() {
+        window.alert("Drag this to bookmark bar and use in youtube site.");
+        return false;
+    };
 
     // listens to enter key presses on input field
     document.getElementById("link").addEventListener("keypress", function(e)
@@ -131,14 +151,13 @@
      * - https://www.youtube.com/shorts/#
      * @param {String} url
      * @return {String}
+     * 
+     * THIS FUNCTION IS REFERRED TO WITH A BOOKMARKLET, UPDATE ACCORDINGLY
+     * Note: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_expressions
      */
     function collectYoutubeParameter (url)
     {
-        const WIPE = ["https://", "www.", "youtube.com/", "youtu.be/", "watch?v=", "embed/", "shorts/"];
-        WIPE.forEach((a) => {
-            url = url.replace(a, "");
-        });
-        return url; 
+        return url.replace(/https:\/\/|www\.|youtube\.com\/|youtu\.be\/|watch\?v=|embed\/|shorts\//gi, "").split('&')[0];
     }
 
     /**
