--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     // overrides bookmark button
     document.getElementById("bookmark").onclick = function() {
-        window.alert("Drag this to bookmark bar and use in youtube site.");
+        window.alert("Drag this to bookmark bar and click in youtube video.");
         return false;
     };
 
